--- a/tex/paper.bib
+++ b/tex/paper.bib
@@ -1,13 +1,3 @@
-@article{wright_felleise:typesafety,
-	author = {Andrew Wright and Matthias Felleisen},
-	title = {A Syntactic Approach to Type Soundness},
-	journal = {Information and Computation},
-	volume = {115},
-	pages = {38-94},
-	month = {11},
-	year = {1994},
-}
-
 @article{milner:type_polymorphism,
 	author = {Robin Milner},
 	title = {A Theory of Type Polimorphism in Programming}, 
@@ -16,6 +6,16 @@
 	pages = {348-375},
 	month = {4},
 	year = {1978},
+}
+
+@article{wright_felleisen:typesafety,
+	author = {Andrew Wright and Matthias Felleisen},
+	title = {A Syntactic Approach to Type Soundness},
+	journal = {Information and Computation},
+	volume = {115},
+	pages = {38-94},
+	month = {11},
+	year = {1994},
 }
 
 @book{gollmann:computersecurity,
@@ -46,25 +46,29 @@
 @misc{rust:language,
 	author	= {Steve Klabnik and Carol  Nichols},
 	title = {The Rust Programming Language},
+	year = {2020},
 	url = {https://doc.rust-lang.org/book/title-page.html},
 }
 
 @misc{rust:reference,
 	title = {The Rust Reference},
+	year = {2020},
 	url	= {https://doc.rust-lang.org/reference/introduction.html},
 	key	= {The Rust Reference},
 }
 
-@misc{rust:unstable,
-	title = {The Rust Unstable Book},
-	url	= {https://doc.rust-lang.org/nightly/unstable-book/compiler-flags.html},
-	key = {The Rust Unstable Book},
-}
-
 @misc{rust:rustonomicon,
 	title = {Rustonomicon},
+	year = {2020},
 	url	= {https://doc.rust-lang.org/nomicon/index.html},
 	key = {Rustonomicon},
+}
+
+@misc{rust:unstable,
+	title = {The Rust Unstable Book},
+	year = {2020},
+	url	= {https://doc.rust-lang.org/nightly/unstable-book/compiler-flags.html},
+	key = {The Rust Unstable Book},
 }
 
 @misc{cencia:dispense,
@@ -73,6 +77,13 @@
 	year = {2019},
 	url = {http://wwwusers.di.uniroma1.it/~lpara/DISPENSE/note.pdf},
 	key = {Dispense del corso},
+}
+
+@techreport{necula_lee:proof_carrying,
+  author      = {George C. Necula and Peter Lee},
+  title       = {Proof-Carrying Code},
+  institution = {School of Computer Science Carnegie Mellon University},
+  year        = {1996}
 }
 
 @techreport{nist:800,
